# billiard_helper

./: Application.cpp  Application.hpp  BilliardHelper.cpp  BilliardHelper.hpp  CMakeLists.txt  ImageAnalyser.cpp  ImageAnalyser.hpp  README.md  Vector.hpp  main.cpp
test/: AnalyserTest.cpp  CMakeLists.txt
